# rust-rest-api-axum

./: .env.example  Cargo.toml  Makefile
migrations/: 20250715163531_create_user_table.sql
src/: init.rs  lib.rs  main.rs  routes.rs
src/data/: errors.rs  user.rs
src/handlers/: auth.rs  errors.rs  helpers.rs  public.rs  todos.rs
src/models/: app.rs  templates.rs  user_form_models.rs
templates/pages/: sign-up.html
